<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Team_name"
            android:layout_centerHorizontal="true"
            android:textSize="35dp"
            />
        <TextView
            android:id="@+id/id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Player1_name"
            android:textSize="25dp"
            android:layout_below="@id/id1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/id3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:text="@string/Player2_name"
            android:textSize="25dp" />
        <TextView
            android:id="@+id/id4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1_currentscore"
            android:textSize="22dp"
            android:layout_below="@id/id2"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="50dp"
            android:textColor="#FF0909"
            />
        <TextView
            android:id="@+id/id5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2_currentscore"
            android:textSize="22dp"
            android:layout_below="@id/id3"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:layout_alignParentRight="true"
            android:textColor="#FF0909"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bt1"
            android:text="@string/p1score1"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/id4"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bt2"
            android:text="@string/p1score2"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/bt1"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bt3"
            android:text="@string/p1score3"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/bt2"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bt4"
            android:text="@string/p1score4"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/bt3"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bt5"
            android:text="@string/p1score5"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/bt4"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bt6"
            android:text="@string/p1score6"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/bt5"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bt7"
            android:text="@string/p1score7"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/bt6"
            android:background="#79FFDE"
            />

        <Button
            android:id="@+id/bk1"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_below="@+id/id5"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="#79FFDE"
            android:text="@string/p2score1"
            android:textSize="20dp" />
        <Button
            android:id="@+id/bk2"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_below="@id/bk1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:text="@string/p1score2"
            android:textSize="20dp"
            android:background="#79FFDE"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bk3"
            android:text="@string/p1score3"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/bk2"
            android:layout_alignParentRight="true"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bk4"
            android:text="@string/p1score4"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/bk3"
            android:layout_alignParentRight="true"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bk5"
            android:text="@string/p1score5"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/bk4"
            android:layout_alignParentRight="true"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bk6"
            android:text="@string/p1score6"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/bk5"
            android:layout_alignParentRight="true"
            android:background="#79FFDE"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/bk7"
            android:text="@string/p1score7"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/bk6"
            android:layout_alignParentRight="true"
            android:background="#79FFDE"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

        <TextView
            android:id="@+id/rt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Totalrun"
            android:gravity="center_horizontal"
            android:textSize="25dp"
            android:layout_below="@id/bk7"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/rt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalover"
            android:textSize="20dp"
            android:layout_below="@id/rt1"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opponent_over"
            android:textSize="20dp"
            android:layout_below="@id/rt2"
            android:layout_marginLeft="10dp"
            /></RelativeLayout>





    </RelativeLayout>